KernelSU: Integrate KernelSU * https://kernelsu.org/guide/how-to-integrate-for-non-gki.html
Change-Id: I6d56e1ba3362f3db774b711b39fca262744da9af
Signed-off-by: SH4ND <miqueiasantos20@gmail.com>

--- a/arch/arm64/configs/ocean_defconfig
+++ b/arch/arm64/configs/ocean_defconfig
@@ -46,7 +46,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-fenrir"
+CONFIG_LOCALVERSION="-fenrir-KSU"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -209,6 +209,7 @@ CONFIG_HAVE_PERF_EVENTS=y
 #
 # Kernel Performance Events And Counters
 #
+CONFIG_KSU=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_USER_SHARE is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
