--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -181,6 +181,7 @@ obj-$(CONFIG_ESOC)              += esoc/
 obj-$(CONFIG_FPGA)		+= fpga/
 obj-$(CONFIG_SENSORS_SSC)		+= sensors/
 obj-$(CONFIG_TEE)		+= tee/
+obj-$(CONFIG_KSU)		 += kernelsu/
 
 obj-y += mmi_annotate/
 obj-y += mmi_info/
